页脚信息小修

--- a/templates/inc/footer.html
+++ b/templates/inc/footer.html
@@ -40,7 +40,7 @@
                 </div>
                 <div class="global-footer-row-right">
                     <div class="terms-sponsor">
-                        Kotlin 与 Kotlin 官方英文站由 <a href="http://jetbrains.com" class="sponsor sponsor_jetbrains jetbrains-logo _logo-jetbrains"
+                        Kotlin 语言与 Kotlin 官方英文站由 <a href="http://jetbrains.com" class="sponsor sponsor_jetbrains jetbrains-logo _logo-jetbrains"
                                                       target="_blank">JetBrains</a> 赞助及开发；
                     </div>
                     <div class="terms-sponsor">
