--- a/templates/inc/footer.html
+++ b/templates/inc/footer.html
@@ -26,7 +26,7 @@
                     <p class="terms-para"><a class="terms-kit"
                                              href="/eap/">抢先体验预览</a></p>
                     <p class="terms-para"><a class="terms-kit"
-                                             href="/security.html">Security</a></p>
+                                             href="/security.html">安全性</a></p>
                         <p class="terms-para"><a class="terms-kit"
                               href={{ url_for('asset', path='kotlin-media-kit.pdf') }}>宣传资料</a></p>
                     <div class="terms-copyright">
